[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scripts/CustomizeController.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/prototype32.fnt" type="BitmapFont" id=2]

[node name="CustomizeController" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="SelectTag" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 0.0
margin/right = 768.0
margin/bottom = 600.0

[node name="TagSelector" type="OptionButton" parent="SelectTag"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 236.0
margin/top = 285.0
margin/right = 275.0
margin/bottom = 305.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="TextEdit" type="TextEdit" parent="SelectTag"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 384.0
margin/right = 360.0
margin/bottom = 409.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="CreateTag" type="Button" parent="SelectTag"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 237.0
margin/top = 424.0
margin/right = 290.0
margin/bottom = 444.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create"
flat = false

[node name="T1" type="Label" parent="SelectTag"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 170.0
margin/top = 232.0
margin/right = 360.0
margin/bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Select a tag..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="T2" type="Label" parent="SelectTag"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 105.0
margin/top = 336.0
margin/right = 418.0
margin/bottom = 370.0
custom_fonts/font = ExtResource( 2 )
text = "...or create a new one."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="item_selected" from="SelectTag/TagSelector" to="." method="_on_TagSelector_item_selected"]


